# microminer-eval

./: .gitignore  Dockerfile  README.md  clustering_analysis.ipynb  docker-compose.yml  parameter_matrix.py  partition_matrix.py  pyproject.toml  requirements.txt  sensitivity_analysis.ipynb  test.ipynb
cargo/: Activator.java  cargo_128scenarios_nopolicies_sobol_graph.pkl  cargo_128scenarios_nopolicies_sobol_model.pkl  cargo_128scenarios_nopolicies_sobol_partitions.pkl  cargo_stable_solutions.pkl
jpetstore/: application.txt  jpetstore_128scenarios_nopolicies_sobol_graph.pkl  jpetstore_128scenarios_nopolicies_sobol_model.pkl  jpetstore_128scenarios_nopolicies_sobol_partitions.pkl  jpetstore_stable_solutions.pkl  results.csv
microminer_eval/: main.py  main_emat.py  microminer.py  parameter_matrix.py  partition_matrix.py
microminer_eval/algorithm/: Clustering.py  Graph.py  LDA.py  StringUtils.py  TfIdf.py  Utils.py  main.py  requirements.txt
microminer_eval/algorithm/entities/: Class.py
microminer_eval/algorithm/metrics/: CHD.py  CHM.py  CMQ.py  MetricExecutor.py  Metrics.py  SMQ.py
microminer_eval/algorithm/tests/: FileUtilstest.py
microminer_eval/algorithm/visitors/: ClassVisitor.py
microminer_eval/partition/: typed_services_identification.py
microminer_eval/preprocessing/: call_graph.py  preprocess.py
microminer_eval/stability_analysis/: main_emat.py  parameter_matrix.py  partition_matrix.py
notebooks/: clustering_analysis.ipynb  question_generation.ipynb  semantic_layer.ipynb  sensitivity_analysis.ipynb
results/cargo/: call_graph.csv
results/jpetstore/: call_graph.csv
symbolsolver/: dependency-reduced-pom.xml
symbolsolver/src/main/java/utils/: FileUtils.java
