[tool.poetry]
name = "microminer-eval"
version = "0.1.0"
description = ""
authors = ["Ana Martínez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "microminer_eval"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
transformers = "^4.36.2"
torch = "^2.1.2"
pandas = "^2.1.4"
joblib = "^1.3.2"
numpy = "^1.26.3"
scikit-learn = "1.2.2"
scipy = "^1.11.4"
cdlib = "^0.3.0"
networkx = "^3.2.1"
nltk = "^3.8.1"
gensim = "^4.3.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
llama-index = "^0.11.17"
llama-index-llms-groq = "^0.2.0"
scikit-learn-extra = "^0.3.0"
ema-workbench = "^2.5.2"
llama-index-llms-openai = "^0.2.13"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-experimental = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
